# ffmpeg

./: README.md
TestVod/: settings.gradle
TestVod/app/: build.gradle
TestVod/app/src/androidTest/java/com/cms/testvod/: ExampleInstrumentedTest.java
TestVod/app/src/main/: AndroidManifest.xml
TestVod/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
TestVod/app/src/main/java/com/cms/testvod/: MainActivity.java
TestVod/app/src/main/res/layout/: activity_main.xml
TestVod/app/src/main/res/values/: strings.xml
TestVod/app/src/test/java/com/cms/testvod/: ExampleUnitTest.java
TestVod/base/src/androidTest/java/com/cms/base/: ExampleInstrumentedTest.java
TestVod/base/src/main/: AndroidManifest.xml
TestVod/base/src/main/java/com/cms/base/: ULog.java
TestVod/base/src/test/java/com/cms/base/: ExampleUnitTest.java
TestVod/gradle/wrapper/: gradle-wrapper.properties
TestVod/player/: build.gradle
TestVod/player/exoplayer/: build.gradle
TestVod/player/exoplayer/src/androidTest/java/com/cms/exoplayer/: ExampleInstrumentedTest.java
TestVod/player/exoplayer/src/main/: AndroidManifest.xml
TestVod/player/exoplayer/src/main/java/com/cms/exoplayer/: ExoPlayer.java  ZTEExoPlayer.java
TestVod/player/exoplayer/src/test/java/com/cms/exoplayer/: ExampleUnitTest.java
TestVod/player/ffmpegplayer/: build.gradle
TestVod/player/ffmpegplayer/src/androidTest/java/com/cms/ffmpegplayer/: ExampleInstrumentedTest.java
TestVod/player/ffmpegplayer/src/main/: AndroidManifest.xml
TestVod/player/ffmpegplayer/src/main/cpp/: CMakeLists.txt  native-lib.cpp
TestVod/player/src/androidTest/java/com/cms/player/: ExampleInstrumentedTest.java
TestVod/player/src/main/: AndroidManifest.xml
TestVod/player/src/main/cpp/: native-lib.cpp
TestVod/player/src/main/java/com/cms/player/: AbstractMediaPlayer.java  AbstractPlayer.java  FfmpegPlayer.java  MediaPlayerBase.java  MediaPlayerProxy.java  PlayerProxy.java  StandardPlayer.java  ZTEExoPlayer.java
TestVod/player/src/test/java/com/cms/player/: ExampleUnitTest.java
TestVod/player/standardplayer/: build.gradle
TestVod/player/standardplayer/src/main/: AndroidManifest.xml
TestVod/view/src/androidTest/java/com/cms/view/: ExampleInstrumentedTest.java
TestVod/view/src/main/: AndroidManifest.xml
TestVod/view/src/main/java/com/cms/view/: MyTimeProgressBar.java
TestVod/view/src/test/java/com/cms/view/: ExampleUnitTest.java
cross-compile/: configure  readme.txt
(+10 files in other folders)
